--- a/lesson-06.ipynb
+++ b/lesson-06.ipynb
@@ -11,9 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "\u001b[32m┌─────────────────────┐\n│ Welcome to lesson 6 │\n└─────────────────────┘\u001b[0m"
+    }
+   ],
    "source": [
     "from course_engine import start_lesson\n",
     "start_lesson(6)\n"
@@ -40,18 +48,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "checks": "demand(\"key == 'two'\", 'You need to select the right key.')",
     "exercise_number": 1,
-    "expected": "2\n"
+    "expected": "2\n",
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<pre>2\n\n<span class=\"ansi-green-fg\" style=\"color: #4f4\">┌────────────────────────────────────────────┐\n│ </span><span class=\"ansi-green-fg\" style=\"color: #4f4\">✔ Your output looks correct</span><span class=\"ansi-green-fg\" style=\"color: #4f4\">                │\n│ </span><span class=\"ansi-green-fg\" style=\"color: #4f4\">✔ You need to select the right key.</span><span class=\"ansi-green-fg\" style=\"color: #4f4\">        │\n│                                            │\n│ Good job! You have completed this exercise │\n└────────────────────────────────────────────┘</span>\n</pre>"
+     },
+     "metadata": {},
+     "execution_count": 14
+    }
+   ],
    "source": [
     "# Exercise 1\n",
     "\n",
     "d = {'one': 1, 'two': 2, 'three': 3}\n",
-    "key = 'something'\n",
+    "key = 'two'\n",
     "print(d[key])"
    ]
   },
@@ -64,18 +83,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "checks": "demand(\"key == 2\", 'You need to select the right key.')",
     "exercise_number": 2,
     "expected": "two\n"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<pre>two\n\n<span class=\"ansi-green-fg\" style=\"color: #4f4\">┌────────────────────────────────────────────┐\n│ </span><span class=\"ansi-green-fg\" style=\"color: #4f4\">✔ Your output looks correct</span><span class=\"ansi-green-fg\" style=\"color: #4f4\">                │\n│ </span><span class=\"ansi-green-fg\" style=\"color: #4f4\">✔ You need to select the right key.</span><span class=\"ansi-green-fg\" style=\"color: #4f4\">        │\n│                                            │\n│ Good job! You have completed this exercise │\n└────────────────────────────────────────────┘</span>\n</pre>"
+     },
+     "metadata": {},
+     "execution_count": 19
+    }
+   ],
    "source": [
     "# Exercise 2\n",
     "\n",
     "d = {1: 'one', 2: 'two', 3: 'three'}\n",
-    "key = 'something'\n",
+    "key = 2\n",
     "print(d[key])"
    ]
   },
@@ -88,18 +117,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "checks": "demand(\"key == 'Maine'\", 'You need to select the right key.')",
     "exercise_number": 3,
     "expected": "Moose\n"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<pre>Moose\n\n<span class=\"ansi-green-fg\" style=\"color: #4f4\">┌────────────────────────────────────────────┐\n│ </span><span class=\"ansi-green-fg\" style=\"color: #4f4\">✔ Your output looks correct</span><span class=\"ansi-green-fg\" style=\"color: #4f4\">                │\n│ </span><span class=\"ansi-green-fg\" style=\"color: #4f4\">✔ You need to select the right key.</span><span class=\"ansi-green-fg\" style=\"color: #4f4\">        │\n│                                            │\n│ Good job! You have completed this exercise │\n└────────────────────────────────────────────┘</span>\n</pre>"
+     },
+     "metadata": {},
+     "execution_count": 20
+    }
+   ],
    "source": [
     "# Exercise 3\n",
     "\n",
     "d = {'Kansas': 'Bison', 'Maine': 'Moose', 'Wyoming': 'Bison'}\n",
-    "key = 'something'\n",
+    "key = 'Maine'\n",
     "print(d[key])"
    ]
   },
@@ -115,18 +154,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "checks": "demand(\"len(d) == 4\", 'You have not yet added a new key.')",
     "exercise_number": 4,
     "expected": "{'one': 1, 'two': 2, 'three': 3, 'four': 4}\n"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<pre>{&#39;one&#39;: 1, &#39;two&#39;: 2, &#39;three&#39;: 3, &#39;four&#39;: 4}\n\n<span class=\"ansi-green-fg\" style=\"color: #4f4\">┌────────────────────────────────────────────┐\n│ </span><span class=\"ansi-green-fg\" style=\"color: #4f4\">✔ Your output looks correct</span><span class=\"ansi-green-fg\" style=\"color: #4f4\">                │\n│ </span><span class=\"ansi-green-fg\" style=\"color: #4f4\">✔ You have not yet added a new key.</span><span class=\"ansi-green-fg\" style=\"color: #4f4\">        │\n│                                            │\n│ Good job! You have completed this exercise │\n└────────────────────────────────────────────┘</span>\n</pre>"
+     },
+     "metadata": {},
+     "execution_count": 25
+    }
+   ],
    "source": [
     "# Exercise 4\n",
     "\n",
     "d = {'one': 1, 'two': 2, 'three': 3}\n",
     "# Put code here\n",
+    "d['four'] = 4\n",
     "print(d)"
    ]
   },
@@ -141,18 +191,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "checks": "",
     "exercise_number": 5,
     "expected": "{'one': 1, 'two': 2, 'three': 33}\n"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<pre>{&#39;one&#39;: 1, &#39;two&#39;: 2, &#39;three&#39;: 33}\n\n<span class=\"ansi-green-fg\" style=\"color: #4f4\">┌────────────────────────────────────────────┐\n│ </span><span class=\"ansi-green-fg\" style=\"color: #4f4\">✔ Your output looks correct</span><span class=\"ansi-green-fg\" style=\"color: #4f4\">                │\n│                                            │\n│ Good job! You have completed this exercise │\n└────────────────────────────────────────────┘</span>\n</pre>"
+     },
+     "metadata": {},
+     "execution_count": 28
+    }
+   ],
    "source": [
     "# Exercise 5\n",
     "\n",
     "d = {'one': 1, 'two': 2, 'three': 3}\n",
-    "# Put code here\n",
+    "d['three'] = 33\n",
     "print(d)"
    ]
   },
@@ -168,18 +228,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "checks": "",
     "exercise_number": 6,
     "expected": "{'Ohio': 'White-tailed deer', 'Oklahoma': 'Bison', 'Oregon': 'Beaver'}\n"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<pre>{&#39;Ohio&#39;: &#39;White-tailed deer&#39;, &#39;Oklahoma&#39;: &#39;Bison&#39;, &#39;Oregon&#39;: &#39;Beaver&#39;}\n\n<span class=\"ansi-green-fg\" style=\"color: #4f4\">┌────────────────────────────────────────────┐\n│ </span><span class=\"ansi-green-fg\" style=\"color: #4f4\">✔ Your output looks correct</span><span class=\"ansi-green-fg\" style=\"color: #4f4\">                │\n│                                            │\n│ Good job! You have completed this exercise │\n└────────────────────────────────────────────┘</span>\n</pre>"
+     },
+     "metadata": {},
+     "execution_count": 40
+    }
+   ],
    "source": [
     "# Exercise 6\n",
-    "\n",
+    "import csv\n",
     "d = {}\n",
-    "# Put “for” loop here\n",
+    "for state, animal in csv.reader(open('Data/state-animals.csv')):\n",
+    "    if state.startswith('O'):\n",
+    "        d[state]=animal\n",
     "print(d)"
    ]
   },
@@ -210,6 +282,10 @@
     "animals = ['Bison', 'Moose', 'Orca', 'Bison']\n",
     "counts = {'Bison': 0, 'Moose': 0, 'Orca': 0}\n",
     "# Put “for” loop here\n",
+    "import csv\n",
+    "for state, animal in csv.reader(open('Data/state-animals.csv')):\n",
+    "    if animals\n",
+    "#for each list item, add to the count: ??value+1??\n",
     "print(counts)"
    ]
   },
@@ -308,9 +384,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.2 64-bit",
    "language": "python",
-   "name": "python3"
+   "name": "python_defaultSpec_1600875503580"
   },
   "language_info": {
    "codemirror_mode": {
@@ -322,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.2-final"
   }
  },
  "nbformat": 4,
