--- a/lesson-07.ipynb
+++ b/lesson-07.ipynb
@@ -14,9 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "\u001b[32m┌─────────────────────┐\n│ Welcome to lesson 7 │\n└─────────────────────┘\u001b[0m"
+    }
+   ],
    "source": [
     "from course_engine import start_lesson\n",
     "start_lesson(7)\n"
@@ -34,15 +42,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "checks": "",
     "exercise_number": 1,
-    "expected": "'That sounds like a bit of old Bilbo's rhyming,' said Pippin.\n"
+    "expected": "'That sounds like a bit of old Bilbo's rhyming,' said Pippin.\n",
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "&lt;IPython.core.display.HTML object&gt;",
+      "text/html": "<pre>&#39;That sounds like a bit of old Bilbo&#39;s rhyming,&#39; said Pippin.\n\n<span class=\"ansi-green-fg\" style=\"color: #4f4\">┌────────────────────────────────────────────┐\n│ </span><span class=\"ansi-green-fg\" style=\"color: #4f4\">✔ Your output looks correct</span><span class=\"ansi-green-fg\" style=\"color: #4f4\">                │\n│                                            │\n│ Good job! You have completed this exercise │\n└────────────────────────────────────────────┘</span>\n</pre>"
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
    "source": [
     "# Exercise 1\n",
+    "print(\"\\'That sounds like a bit of old Bilbo's rhyming,\\' said Pippin.\")\n",
     "\n"
    ]
   },
@@ -58,16 +78,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "checks": "",
     "exercise_number": 2,
-    "expected": "\"It's a dangerous business, Frodo, going out of your door,\" he used to say.\n"
+    "expected": "\"It's a dangerous business, Frodo, going out of your door,\" he used to say.\n",
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "&lt;IPython.core.display.HTML object&gt;",
+      "text/html": "<pre>&#34;It&#39;s a dangerous business, Frodo, going out of your door,&#34; he used to say.\n\n<span class=\"ansi-green-fg\" style=\"color: #4f4\">┌────────────────────────────────────────────┐\n│ </span><span class=\"ansi-green-fg\" style=\"color: #4f4\">✔ Your output looks correct</span><span class=\"ansi-green-fg\" style=\"color: #4f4\">                │\n│                                            │\n│ Good job! You have completed this exercise │\n└────────────────────────────────────────────┘</span>\n</pre>"
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
    "source": [
     "# Exercise 2\n",
-    "\n"
+    "print(\"\\\"It's a dangerous business, Frodo, going out of your door,\\\" he used to say.\")\n"
    ]
   },
   {
@@ -82,16 +113,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "checks": "",
     "exercise_number": 3,
     "expected": "I like to surround words with \\backslashes\\.\n"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "&lt;IPython.core.display.HTML object&gt;",
+      "text/html": "<pre>I like to surround words with \\backslashes\\.\n\n<span class=\"ansi-green-fg\" style=\"color: #4f4\">┌────────────────────────────────────────────┐\n│ </span><span class=\"ansi-green-fg\" style=\"color: #4f4\">✔ Your output looks correct</span><span class=\"ansi-green-fg\" style=\"color: #4f4\">                │\n│                                            │\n│ Good job! You have completed this exercise │\n└────────────────────────────────────────────┘</span>\n</pre>"
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
    "source": [
     "# Exercise 3\n",
-    "\n"
+    "\n",
+    "print(\"I like to surround words with \\\\backslashes\\\\.\")"
    ]
   },
   {
@@ -106,16 +148,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "checks": "",
     "exercise_number": 4,
     "expected": "1 2 3 4 5 6 7 8 9 10 "
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "&lt;IPython.core.display.HTML object&gt;",
+      "text/html": "<pre>1 2 3 4 5 6 7 8 9 10 \n<span class=\"ansi-green-fg\" style=\"color: #4f4\">┌────────────────────────────────────────────┐\n│ </span><span class=\"ansi-green-fg\" style=\"color: #4f4\">✔ Your output looks correct</span><span class=\"ansi-green-fg\" style=\"color: #4f4\">                │\n│                                            │\n│ Good job! You have completed this exercise │\n└────────────────────────────────────────────┘</span>\n</pre>"
+     },
+     "metadata": {},
+     "execution_count": 23
+    }
+   ],
    "source": [
     "# Exercise 4\n",
-    "\n"
+    "for n in range(1,11):\n",
+    "    print (n, end=\" \")\n"
    ]
   },
   {
@@ -132,16 +185,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "checks": "",
     "exercise_number": 5,
     "expected": "1 2 3 4 5 6 7 8 9 10\n"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "&lt;IPython.core.display.HTML object&gt;",
+      "text/html": "<pre>1 2 3 4 5 6 7 8 9 10 \n\n\n<span class=\"ansi-green-fg\" style=\"color: #4f4\">┌────────────────────────────────────────────┐\n│ </span><span class=\"ansi-green-fg\" style=\"color: #4f4\">✔ Your output looks correct</span><span class=\"ansi-green-fg\" style=\"color: #4f4\">                │\n│                                            │\n│ Good job! You have completed this exercise │\n└────────────────────────────────────────────┘</span>\n</pre>"
+     },
+     "metadata": {},
+     "execution_count": 24
+    }
+   ],
    "source": [
     "# Exercise 5\n",
-    "\n"
+    "for n in range(1,11):\n",
+    "    print (n, end=\" \")\n",
+    "print ('\\n')\n"
    ]
   },
   {
@@ -162,24 +227,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "checks": "",
     "exercise_number": 6,
     "expected": "      February      \n 1  2  3  4  5  6  7\n 8  9 10 11 12 13 14\n15 16 17 18 19 20 21\n22 23 24 25 26 27 28 "
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "&lt;IPython.core.display.HTML object&gt;",
+      "text/html": "<pre>February\n1 2 3 4 5 6 <span class=\"ansi-yellow-fg\" style=\"color: #ff2\">Traceback (most recent call last):</span>\n  File &#34;/Volumes/gottc/Github Repository clone/CPS-108/course_engine.py&#34;, line 203, in run_code\n    eval(compiled, {}, local_scope)\n  File &#34;Exercise 6&#34;, line 8, in &lt;module&gt;\n    Print (n, end =&#34;\\n&#34;)\n<span class=\"ansi-yellow-fg\" style=\"color: #ff2\">NameError: name &#39;Print&#39; is not defined</span>\n\n</pre>"
+     },
+     "metadata": {},
+     "execution_count": 41
+    }
+   ],
    "source": [
     "# Exercise 6\n",
-    "\n"
+    "month = 'February'\n",
+    "print(month)\n",
+    "for n in range(1, 29):\n",
+    "    if n % 7:\n",
+    "        print (n, end = ' ')\n",
+    "    else:\n",
+    "        Print (n, end =\"\\n\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "Python 3.8.2 64-bit",
+   "display_name": "Python 3.8.2 64-bit",
+   "metadata": {
+    "interpreter": {
+     "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    }
+   }
   },
   "language_info": {
    "codemirror_mode": {
@@ -191,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.2-final"
   }
  },
  "nbformat": 4,
